# site/api/src/controllers/controllerDadosFisicos.js
@@ -4,7 +4,7 @@ const prisma = new PrismaClient()
 async function create(req, res) {
     try {
         const { id_dadosfisicos, id_user, altura, peso, idade, sexo, exeReg, obj, deli} = req.body
-        const user = await prisma.user.create({
+        const dadosfisicos = await prisma.dadosFisicos.create({
         data: {
             id_dadosfisicos,
             id_user,
@@ -17,7 +17,7 @@ async function create(req, res) {
             deli
         }
         })
-        res.status(201).json(user)
+        res.status(201).json(dadosfisicos)
     } catch (error) {
         console.error(error)
         res.status(500).json({ error: 'An error occurred while creating the user.' })
@@ -29,15 +29,15 @@ async function read(req, res) {
     const { id } = req.params
 
     try {
-        const user = await prisma.user.findMany({
+        const dadosFisicos = await prisma.dadosFisicos.findMany({
 
         })
 
-        if (!user) {
+        if (!dadosFisicos) {
             return res.status(404).json({ error: 'User not found' })
         }
 
-        res.status(200).json(user)
+        res.status(200).json(dadosFisicos)
     } catch (error) {
         console.error('Error reading user:', error)
         res.status(500).json({ error: 'Internal Server Error' })
@@ -49,7 +49,7 @@ async function update(req, res) {
     const { id_dadosfisicos, id_user, altura, peso, idade, sexo, exeReg, obj, deli } = req.body
 
     try {
-        const user = await prisma.user.update({
+        const dadosFisicos = await prisma.dadosFisicos.update({
             where: { id: parseInt(id) },
             data: {
                 id_dadosfisicos,
@@ -64,9 +64,9 @@ async function update(req, res) {
             }
         })
 
-        res.status(200).json(user)
+        res.status(200).json(dadosFisicos)
     } catch (error) {
-        console.error('Error updating user:', error)
+        console.error('Error updating dadosfisicos:', error)
         res.status(500).json({ error: 'Internal Server Error' })
     }
 }
@@ -75,13 +75,13 @@ async function remove(req, res) {
     const { id } = req.params
 
     try {
-        const user = await prisma.user.delete({
+        const dadosFisicos = await prisma.dadosFisicos.delete({
             where: { id: parseInt(id) }
         })
 
-        res.status(200).json(user)
+        res.status(200).json(dadosFisicos)
     } catch (error) {
-        console.error('Error deleting user:', error)
+        console.error('Error deleting dadosFisicos:', error)
         res.status(500).json({ error: 'Internal Server Error' })
     }
 }
