# site/api/src/routes.js
@@ -2,8 +2,8 @@ const express = require('express')
 const routes = express.Router()
 
 const user = require('./controllers/controllerUser')
-// const DadosFisicos = require('./controllers/controllerDadosFisicos')
-// const DadosMentais = require('./controllers/controllerDadosMentais')
+const DadosFisicos = require('./controllers/controllerDadosFisicos')
+const DadosMentais = require('./controllers/controllerDadosMentais')
 // const Diario = require('./controllers/controllerDiario')
 // const Meditacao = require('./controllers/controllerMeditacao')
 // const MeditacaoUser = require('./controllers/controllermedUser')
@@ -33,15 +33,15 @@ routes.post('/user', user.create)
 routes.put('/user/:id', user.update)
 routes.delete('/user/:id', user.remove)
 
-// routes.get('/dadosfisicos', DadosFisicos.read)
-// routes.post('/dadosfisicos', DadosFisicos.create)
-// routes.put('/dadosfisicos/:id', DadosFisicos.update)
-// routes.delete('/dadosfisicos/:id', DadosFisicos.remove)
+routes.get('/dadosfisicos', DadosFisicos.read)
+routes.post('/dadosfisicos', DadosFisicos.create)
+routes.put('/dadosfisicos/:id', DadosFisicos.update)
+routes.delete('/dadosfisicos/:id', DadosFisicos.remove)
 
-// routes.get('/dadosmentais', DadosMentais.read)
-// routes.post('/dadosmentais', DadosMentais.create)
-// routes.put('/dadosmentais/:id', DadosMentais.update)
-// routes.delete('/dadosmentais/:id', DadosMentais.remove)
+routes.get('/dadosmentais', DadosMentais.read)
+routes.post('/dadosmentais', DadosMentais.create)
+routes.put('/dadosmentais/:id', DadosMentais.update)
+routes.delete('/dadosmentais/:id', DadosMentais.remove)
 
 // routes.get('/diario', Diario.read)
 // routes.post('/diario', Diario.create)
